--- a/covid/covid_app/templates/covid_app/base.html
+++ b/covid/covid_app/templates/covid_app/base.html
@@ -19,6 +19,7 @@
 
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
   {{ game_form.media }}
 
   {% block scripts %}
